Wed Apr 25 15:45:49 UTC 2007  Scott Harris <harris_s@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/ZeroCopyAllocator_T.cpp:
        * dds/DCPS/ZeroCopyAllocator_T.h:
        * dds/DCPS/ZeroCopyAllocator_T.inl:
        * dds/DCPS/ZeroCopyInfoSeq_T.cpp:
        * dds/DCPS/ZeroCopyInfoSeq_T.h:
        * dds/DCPS/ZeroCopyInfoSeq_T.inl:
        * dds/DCPS/ZeroCopySeq_T.cpp:
        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/DCPS/ZeroCopySeq_T.inl:
        * dds/DdsDcps.mpc:

          Gave each class its own set of files (.h, .inl, .cpp) 
          to avoid a circular include problem.

Tue Apr 24 23:42:46 UTC 2007  Scott Harris <harris_s@ociweb.com>

        * dds/DCPS/ZeroCopySeq_T.cpp:
        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/DCPS/ZeroCopySeq_T.inl:
        * dds/DCPS/ZeroCopySeqBase.cpp:
        * dds/DCPS/ZeroCopySeqBase.h:
        * dds/DCPS/ZeroCopySeqBase.inl:
        * dds/DdsDcps.mpc:
        
          Properly inline zero-copy read support classes.

Tue Apr 24 20:10:51 UTC 2007  Scott Harris <harris_s@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/ZeroCopySeq_T.h:
        
          Implement automatic return_loan.
        
        * tests/DCPS/ZeroCopyRead/main.cpp:
        * tests/DCPS/ZeroCopyRead/Simple.idl:
        
          Add automatic return_loan test.
          Test to be sure sample and Info destructors are called.

Mon Apr 23 23:35:36 UTC 2007  Scott Harris <harris_s@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          Fix a delete while zero-copy sequence has reference bug.

        * dds/DCPS/DataReaderImpl.cpp:

          Minor comment change.

        * tests/DCPS/ZeroCopyRead:
        * tests/DCPS/ZeroCopyRead/domain_ids:
        * tests/DCPS/ZeroCopyRead/main.cpp:
        * tests/DCPS/ZeroCopyRead/README:
        * tests/DCPS/ZeroCopyRead/run_test.pl:
        * tests/DCPS/ZeroCopyRead/Simple.idl: