@@ -15,6 +15,7 @@
 #include /**/ "ace/pre.h"
 
 #include "dcps_export.h"
+#include "tao/corbafwd.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
